SERVER-31829 Limit OP_MSG parser to 2 document sequences